--- a/package.json
+++ b/package.json
@@ -24,23 +24,22 @@
   "author": "Özüm Eldoğan",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.x",
-    "fs-extra": "^4.x",
-    "get-stdin": "^5.x",
+    "@babel/eslint-parser": "^7.16.5",
+    "chalk": "^5.x",
+    "fs-extra": "^10.x",
+    "get-stdin": "^9.x",
     "yargonaut": "^1.x",
-    "yargs": "^9.x"
+    "yargs": "^17.x"
   },
   "devDependencies": {
-    "babel-eslint": "^8.x",
-    "eslint": "^4.x",
-    "code": "^5.x",
-    "eslint-config-airbnb": "^16.x",
+    "@hapi/code": "^8.x",
+    "eslint": "^8.x",
+    "eslint-config-airbnb": "^19.x",
     "eslint-plugin-import": "^2.x",
     "eslint-plugin-jsx-a11y": "^6.x",
     "eslint-plugin-react": "^7.x",
-    "fcmp": "^1.x",
-    "mocha": "^4.x",
+    "mocha": "^9.x",
     "mz": "^2.x",
-    "nyc": "^11.x"
+    "nyc": "^15.x"
   }
 }
