--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@babel/eslint-parser": "^7.16.5",
     "@dnb-org/standard-version-config": "^3.4.3",
     "chalk": "^5.x",
+    "fcmp": "^1.1.0",
     "fs-extra": "^10.x",
+    "fs-promise": "^2.0.3",
     "get-stdin": "^9.x",
     "replace-between": "github:dnb-org/replace-between",
     "yargonaut": "^1.x",
